# daccord

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cuda  README.md  aws-account.yaml.sample  docker-compose.yml  pyproject.toml
C/Users/paulx/AppData/Local/Temp/tiered_smoke/: gdpr__pdpa_sg.jsonl
consumer/: __init__.py  app.py  pyproject.toml
consumer/labeler/: app.py  queue.py
consumer/tests/: test_labeler_queue.py
costs/: README.md  config.toml  daily.csv
data/: README.md  raw_manifest.json  sources.yaml
data/clauses/: bdsg.json  dpa_2012_ph.json  dpa_2018.json  gdpr.json  loi_il.json  pdpa_my.json  pdpa_sg.json  pdpa_th.json  uk_gdpr.json
data/gold/: toy_v1.jsonl  toy_v1_coverage.md  toy_v1_provenance.md
data/indices/target_clauses/: bdsg.faiss  bdsg.jsonl  dpa_2012_ph.faiss  dpa_2012_ph.jsonl  dpa_2018.faiss  dpa_2018.jsonl  gdpr.faiss  gdpr.jsonl  loi_il.faiss  loi_il.jsonl  pdpa_my.faiss  pdpa_my.jsonl  pdpa_sg.faiss  pdpa_sg.jsonl  pdpa_th.faiss  pdpa_th.jsonl  uk_gdpr.faiss  uk_gdpr.jsonl
data/ingest/: manifest.jsonl  r8_spotcheck.txt
data/ingest/de/bdsg/: bdsg_de_current.md  bdsg_en_current.md
data/ingest/eu/gdpr/: reg_2016_679_consolidated.md
data/ingest/fr/loi_il/: loi_78_17_consolidated.md
data/ingest/my/pdpa_my/: pdpa_my_act709_bilingual.md  pdpa_my_amendment_act_a1727_2024.md
data/ingest/ph/dpa_2012_ph/: dpa_2012_ph.md  dpa_2012_ph_irr_amended.md
data/ingest/sg/pdpa_sg/: pdpa_sg_current.md
data/ingest/th/pdpa_th/: pdpa_th_english_2019.md  pdpa_th_thai_2019.md
data/ingest/uk/dpa_2018/: dpa_2018_current.md
data/ingest/uk/uk_gdpr/: uk_gdpr_current.md
data/parser_bakeoff/: expected_citation_ids.json  sample_pages.json  score_table.csv  summary.md
data/registry/: bdsg.json  dpa_2012_ph.json  dpa_2018.json  gdpr.json  loi_il.json  manifest.jsonl  pdpa_my.json  pdpa_sg.json  pdpa_th.json  summary.md  uk_gdpr.json
docs/: 7a_path.md  MLFLOW.md  development_plan.md
envs/audit/: pyproject.toml
envs/audit/scripts/: run_tokenizer_audit.py
envs/audit/tests/: test_tokenizer_audit.py
envs/bakeoff/: pyproject.toml
envs/bakeoff/scripts/: bakeoff_thai.py
envs/bakeoff/tests/: test_bakeoff_scoring.py
envs/baseline/: pyproject.toml
envs/baseline/tests/: test_local_hf_client.py
envs/eval/: pyproject.toml
envs/eval/scripts/: build_retrieval_index.py  build_target_indices.py  draft_toy_gold.py  run_eval.py  verify_toy_coverage.py
envs/eval/tests/: test_ensemble_prompt.py  test_eval_clients.py  test_eval_prompts.py  test_eval_runner.py  test_eval_schema.py  test_eval_scoring.py  test_rag_seat.py  test_retrieval_client.py  test_target_index.py  test_tier_ensemble.py
envs/ingest/: pyproject.toml
envs/ingest/scripts/: parse_corpus.py  r8_spotcheck.py
envs/ingest/tests/: test_marker_runner.py  test_parse_corpus.py
eval/: README.md  baseline_toy.csv  tokenizer_audit.csv  tokenizer_audit.md
publish/: __init__.py  package_model.py  sagemaker_handler.py
scripts/: aws_setup.ps1  aws_setup.sh  aws_teardown.ps1  aws_teardown.sh  build_splits.py  check_aws_setup.py  cross_check_ensemble.py  download_corpus.py  extract_clauses.py  extract_registry.py  mlflow_smoke_test.py  run_ensemble.py  tier_ensemble.py
src/daccord/: tokenizer_audit.py  tracking.py  validation.py
src/daccord/aws/: __init__.py  batch.py  m2.py
src/daccord/bakeoff/: __init__.py  marker_runner.py  sample.py  scoring.py  typhoon_runner.py
src/daccord/corpus/: __init__.py  downloader.py  manifest.py  sources.py
src/daccord/costs/: __init__.py  __main__.py  cli.py  config.py  errors.py  storage.py  tracker.py
src/daccord/ensemble/: __init__.py  bidirectional.py  prompt.py  schema.py  splits.py  strategy.py  tier.py  validated.py
src/daccord/ensemble/strategies/: __init__.py  bedrock.py  paid_api.py  rag_seat.py
src/daccord/eval/: __init__.py  _rpm.py  clients.py  prompts.py  registry.py  retrieval_index.py  runner.py  schema.py  scoring.py
src/daccord/gold/: __init__.py  schema.py
src/daccord/ingest/: __init__.py  manifest.py  marker_runner.py
src/daccord/registry/: __init__.py  clauses.py  extract.py  patterns.py  schema.py
src/daccord/serving/: __init__.py  clients.py  hybrid.py
tests/: test_aws_m2.py  test_bedrock_batch.py  test_bidirectional.py  test_build_splits.py  test_clause_extractor.py  test_corpus_downloader.py  test_corpus_manifest.py  test_corpus_sources.py  test_costs.py  test_ensemble_strategy.py  test_gold_schema.py  test_ingest_manifest.py  test_paid_api_clients.py  test_paid_api_mock_runs.py  test_registry.py  test_run_ensemble.py  test_serving_hybrid.py  test_tracking.py  test_validated_overlay.py  test_validation.py
