[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daccord-baseline-env"
version = "0.0.0"
description = "Tier-3A local-baseline env. Loads Qwen2.5-7B-Instruct in 4-bit NF4 (matches the tier 10-12 QLoRA load condition) so the M0 baseline and M4 fine-tune-delta are apples-to-apples. GPU service; heavy torch + bitsandbytes deps live here so the shared daccord venv stays slim."
requires-python = ">=3.14,<3.15"
dependencies = [
    "daccord",
    # Latest stable lines (verified 2026-05-25). Match consumer/'s pins so
    # baseline (tier 3A) and consumer (tier 12C) load Qwen the same way.
    "torch>=2.7,<3",
    "transformers>=5.9,<6",
    "bitsandbytes>=0.49,<1",
    # device_map="auto" inside LocalHFClient pulls accelerate at runtime.
    "accelerate>=1.2,<2",
    # The eval-runner instantiates GroqClient + GeminiClient + GeminiJudge as
    # part of M0 baselines (`--models qwen,groq,gemini`). Keeping both SDKs
    # here so the full baseline triple runs from a single service. Matches
    # envs/eval/'s pins so adapter import surface is identical.
    "groq>=1.2,<2",
    "google-genai>=2.6,<3",
]

[dependency-groups]
dev = ["pytest>=9.0,<10"]

[tool.uv]
package = false

[tool.uv.sources]
daccord = { path = "../..", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../../src"]
addopts = "-q"
